--- a/config/system-config.properties
+++ b/config/system-config.properties
@@ -2,7 +2,7 @@
 # multi zookeeper&kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=zookeeper:2181
+cluster1.zk.list=xxxxxx:2181,xxxxxx:2181,xxxxxx:2181
 
 ######################################
 # zk client thread limit
