--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,14 @@
-version: '2'
+version: '3'
 services:
-  zookeeper:
-    image: wurstmeister/zookeeper
-    container_name: zk
-    restart: always
-    ports:
-      - "2181:2181"
-  kafka:
-    image: wurstmeister/kafka
-    container_name: kfk
-    restart: always
-    depends_on:
-      - zookeeper
-    ports:
-      - "9092:9092"
-      - "9999:9999"
-    expose:
-      - "9093"
-    environment:
-        KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://192.168.1.35:9092
-        KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-        KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
-        KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-        KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-        KAFKA_JMX_OPTS: "-Dcom.sun.management.jmxremote=true -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.rmi.server.hostname=192.168.1.35 -Dcom.sun.management.jmxremote.rmi.port=9999"
-        JMX_PORT: 9999
-        KAFKA_CREATE_TOPICS: "test:1:1"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
   kafka-eagle:
-    image: gui66497/kafka_eagle
-    container_name: ke
+    image: kafka-eagle:v1.0
+    container_name: kfk-eagle
     restart: always
-    depends_on:
-      - kafka
     ports:
       - "8048:8048"
     environment:
-      ZKSERVER: "zookeeper:2181"
+      ZKSERVER: "z-2.m22-kafka-lottery.0k10h8.c4.kafka.ap-southeast-1.amazonaws.com:2181,z-3.m22-kafka-lottery.0k10h8.c4.kafka.ap-southeast-1.amazonaws.com:2181,z-1.m22-kafka-lottery.0k10h8.c4.kafka.ap-southeast-1.amazonaws.com:2181"
     volumes:
-      - ./system-config.properties:/kafka-eagle/conf/system-config.properties
+      #- ./config/eagle.properties:/kafka-eagle/bin/system-config.properties
+      - ./config/system-config.properties:/kafka-eagle/conf/system-config.properties
       - ./logs:/kafka-eagle/logs
